2007-06-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* NEWS: Update for upcoming 2.1.1 release.

	* src/formats/pdbformat.cpp (ReadMolecule): Add a new OBPairData
	for any record we don't currently parse. This way all data is
	preserved.

	* src/formats/mol2format.cpp: Fix PR#1739905. Add warning if
	elements cannot be interpreted as atom types correctly (e.g., this
	GaussView file). Instead, attempt to interpret as element names.

	* data/types.txt: Fix two HO typing errors, which masked this
	bug.

	* scripts/openbabel-ruby.i: Fix module declaration -- really
	OpenBabel.

	* tools/obminimize.cpp: Minor fix requested by Chris Swain --
	allow setting output format using -o flag.

	* tools/obfit.cpp: Add RMS output to standard error.

2007-06-23  Noel O'Boyle <baoilleach@gmail.com>
	
	* scripts/*.i (except Perl, which was already done): Added
	groupcontrib.h and updated wrapper code
	* scripts/python/Pybel stuff:
	Added calcdesc() method to Molecules for descriptor calculation 
	Added update() method to MoleculeData
	Convert to string before setting a value in MoleculeData
	Updated tests, and API docs

2007-06-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* configure.in, configure, Makefile.*: Updates from the Cygwin
	ports project for better compatibility (e.g., shared format
	modules on Cygwin). Thanks to Yaakov of Cygwin ports and Noel.

2007-06-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/chemdrawcdx.cpp: Fix a Universal binary problem on
	Mac OS X. We cannot rely on an autoconf test since the compiler is
	run twice: for ppc and i386. Thanks to Mike Stump from Apple for
	help.

	* scripts/java/: Updated classes for vectors of rings and vectors
	of strings.

	* Makefile.am, Makefile.in: Update for Chris's removal of the
	windows directory below.

2007-06-05  Chris Morley

	* src/formats/smilesformat.cpp(PaseSmiles):ignore any char<0
	Caused crash in isspace() in Visual C++8. Fixes bug
	#1730132 for this compiler at least.
